--- a/src/app/pages/where-sleep/where-sleep.page.scss
+++ b/src/app/pages/where-sleep/where-sleep.page.scss
@@ -125,10 +125,6 @@ p {
 
 .slider {
   width: 100%;
-  position: -webkit-sticky; // required for Safari
-  position: sticky;
-  top: 0; // required as well.
-  z-index: 50;
 }
 
 .sliderPrimero,
@@ -195,7 +191,7 @@ ion-label {
   height: 35px;
   font-size: 0.9em;
   font-family: "Poppins", sans-serif;
-  color: rgba(116, 108, 108, 0.75);
+  color: var(--ion-color-dark);
   margin: 0 !important;
 }
 
@@ -217,6 +213,9 @@ ion-label {
 .list_location {
   border-bottom-left-radius: 16px !important;
   border-bottom-right-radius: 16px !important;
+  min-height: 30px;
+  max-height: 200px;
+  overflow-y: scroll;
 }
 
 .open_filter {
