--- a/src/app/pages/events/events.page.html
+++ b/src/app/pages/events/events.page.html
@@ -1,196 +1,194 @@
-<ion-content>
-  <div class="slider">
-    <ion-slides
-      class="sliderPrimero setHeight"
-      scrollbar="false"
-      pager="false"
-      [options]="slideOpts"
-    >
-      <ion-slide *ngFor="let item of sliderEvents" class="sliderHijo">
-        <a
-          *ngIf="item.link !== null && item.link !== '' && item.link !== ' ' && item.link !== undefined"
-          href="{{ item.link }}"
-          class="link"
+<ion-header class="ion-no-border">
+  <ion-toolbar>
+    <div class="slider">
+      <ion-slides
+        class="sliderPrimero setHeight"
+        scrollbar="false"
+        pager="false"
+        [options]="slideOpts"
+      >
+        <ion-slide *ngFor="let item of sliderEvents" class="sliderHijo">
+          <a
+            *ngIf="item.link !== null && item.link !== '' && item.link !== ' ' && item.link !== undefined"
+            href="{{ item.link }}"
+            class="link"
+          >
+            <ion-fab vertical="top" horizontal="start" slot="fixed">
+              <ion-fab-button color="dark">
+                <ion-icon
+                  *ngIf="item.linkTipo !== 'web'"
+                  name="logo-{{ item.linkTipo }}"
+                  class="icon-link"
+                ></ion-icon>
+                <ion-icon
+                  *ngIf="item.linkTipo === 'web'"
+                  name="globe-outline"
+                  class="icon-link"
+                ></ion-icon>
+              </ion-fab-button>
+            </ion-fab>
+          </a>
+          <app-preload
+            [url]="item.imagen.url"
+            [alt]="item.imagen.name"
+            [urlPreload]="preloadImage"
+          ></app-preload>
+        </ion-slide>
+      </ion-slides>
+      <!-- =========>=>=>=> Filtro =========>=>=>=> -->
+      <div class="filter_place">
+        <ion-label
+          *ngIf="!selectdistancia && (optionLocation === null || optionLocation === 'localidad' || optionLocation === '')"
+          (click)="changeFilterLocation()"
+          >localidad</ion-label
         >
-          <ion-fab vertical="top" horizontal="start" slot="fixed">
-            <ion-fab-button color="dark">
-              <ion-icon
-                *ngIf="item.linkTipo !== 'web'"
-                name="logo-{{ item.linkTipo }}"
-                class="icon-link"
-              ></ion-icon>
-              <ion-icon
-                *ngIf="item.linkTipo === 'web'"
-                name="globe-outline"
-                class="icon-link"
-              ></ion-icon>
-            </ion-fab-button>
-          </ion-fab>
-        </a>
-        <app-preload
-          [url]="item.imagen.url"
-          [alt]="item.imagen.name"
-          [urlPreload]="preloadImage"
-        ></app-preload>
-      </ion-slide>
-    </ion-slides>
-    <!-- =========>=>=>=> Filtro =========>=>=>=> -->
-    <div class="filter_place">
-      <ion-label
-        *ngIf="!selectdistancia && (optionLocation === null || optionLocation === 'localidad' || optionLocation === '')"
-        (click)="changeFilterLocation()"
-        >localidad</ion-label
-      >
-      <ion-label
-        *ngIf="!selectdistancia && (optionLocation !== null && optionLocation !== 'localidad' && optionLocation !== '')"
-        class="open_acordeon"
-        (click)="changeFilterLocation()"
-        >{{ optionLocation }}</ion-label
-      >
-      <img *ngIf="!selectdistancia" src="/assets/icon/exchange.png" alt="" />
-      <ion-label
-        *ngIf="(optionType === null || optionType === 'tipo' || optionType === '')"
-        (click)="changeFilterType()"
-        id="filters"
-        >tipo</ion-label
-      >
-      <ion-label
-        *ngIf="(optionType !== null && optionType !== 'tipo' && optionType !== '')"
-        (click)="changeFilterType()"
-        id="filters"
-        class="open_acordeon"
-        >{{ optionType }}</ion-label
-      >
-      <img src="/assets/icon/exchange.png" alt="" />
-      <ion-label
-        *ngIf="((optionDateStart === null || optionDateStart === 'fecha' || optionDateStart === '') && (optionDateEnd === null || optionDateEnd === 'fecha' || optionDateEnd === ''))"
-        (click)="changeFilterDate()"
-        id="filters"
-        >fecha</ion-label
-      >
-      <ion-label
-        *ngIf="((optionDateStart !== null && optionDateStart !== 'fecha' && optionDateStart !== '') || (optionDateEnd !== null && optionDateEnd !== 'fecha' && optionDateEnd !== ''))"
-        (click)="changeFilterDate()"
-        id="filters"
-        class="open_acordeon date_filter"
-      >
-        <span *ngIf="optionDateStart !== null && optionDateStart !== ''"
-          >desde {{ optionDateStart | date:'dd.MM' }}</span
-        ><br />
-        <span *ngIf="optionDateEnd !== null && optionDateEnd !== ''"
-          >hasta {{ optionDateEnd | date:'dd.MM' }}</span
-        ></ion-label
-      >
-    </div>
+        <ion-label
+          *ngIf="!selectdistancia && (optionLocation !== null && optionLocation !== 'localidad' && optionLocation !== '')"
+          class="open_acordeon"
+          (click)="changeFilterLocation()"
+          >{{ optionLocation }}</ion-label
+        >
+        <img *ngIf="!selectdistancia" src="/assets/icon/exchange.png" alt="" />
+        <ion-label
+          *ngIf="(optionType === null || optionType === 'tipo' || optionType === '')"
+          (click)="changeFilterType()"
+          >tipo</ion-label
+        >
+        <ion-label
+          *ngIf="(optionType !== null && optionType !== 'tipo' && optionType !== '')"
+          (click)="changeFilterType()"
+          class="open_acordeon"
+          >{{ optionType }}</ion-label
+        >
+        <img src="/assets/icon/exchange.png" alt="" />
+        <ion-label
+          *ngIf="((optionDateStart === null || optionDateStart === 'fecha' || optionDateStart === '') && (optionDateEnd === null || optionDateEnd === 'fecha' || optionDateEnd === ''))"
+          (click)="changeFilterDate()"
+          >fecha</ion-label
+        >
+        <ion-label
+          *ngIf="((optionDateStart !== null && optionDateStart !== 'fecha' && optionDateStart !== '') || (optionDateEnd !== null && optionDateEnd !== 'fecha' && optionDateEnd !== ''))"
+          (click)="changeFilterDate()"
+          class="open_acordeon date_filter"
+        >
+          <span *ngIf="optionDateStart !== null && optionDateStart !== ''"
+            >desde {{ optionDateStart | date:'dd.MM' }}</span
+          ><br />
+          <span *ngIf="optionDateEnd !== null && optionDateEnd !== ''"
+            >hasta {{ optionDateEnd | date:'dd.MM' }}</span
+          ></ion-label
+        >
+      </div>
 
-    <div>
-      <form [formGroup]="filterForm" class="form_filter">
-        <div *ngIf="isFilterDate">
+      <div>
+        <form [formGroup]="filterForm" class="form_filter">
+          <div *ngIf="isFilterDate">
+            <!-- Filtro por Fecha  -->
+            <div class="filter_name">
+              <span>Fecha</span>
+            </div>
+            <div>
+              <div class="filter_list">
+                <ion-datetime
+                  (ionChange)="filterEvento()"
+                  mode="ios"
+                  placeholder="desde"
+                  doneText="Seleccionar"
+                  cancelText="Cancelar"
+                  monthShortNames="{{monthShortNames}}"
+                  min="{{ fullDay }}"
+                  displayFormat="DD MMM YYYY"
+                  yearValues="{{ customYearValues }}"
+                  formControlName="fecha_inicio"
+                >
+                  <!-- [ngModel]="fecha_inicio"   -->
+                </ion-datetime>
+              </div>
+              <div class="filter_list">
+                <ion-datetime
+                  (ionChange)="filterEvento()"
+                  mode="ios"
+                  placeholder="hasta"
+                  doneText="Seleccionar"
+                  cancelText="Cancelar"
+                  monthShortNames="{{monthShortNames}}"
+                  min="{{ fullDayNext }}"
+                  displayFormat="DD MMM YYYY"
+                  yearValues="{{ customYearValues }}"
+                  formControlName="fecha_fin"
+                >
+                  <!-- [ngModel]="fecha_fin"   -->
+                </ion-datetime>
+              </div>
+            </div>
+          </div>
           <!-- Filtro por Fecha  -->
-          <div class="filter_name">
-            <span id="filters">Fecha</span>
-          </div>
-          <div>
-            <div class="filter_list">
-              <ion-datetime
-                (ionChange)="filterEvento()"
-                mode="ios"
-                placeholder="desde"
-                doneText="Seleccionar"
-                cancelText="Cancelar"
-                monthShortNames="{{monthShortNames}}"
-                min="{{ fullDay }}"
-                displayFormat="DD MMM YYYY"
-                yearValues="{{ customYearValues }}"
-                formControlName="fecha_inicio"
-                id="filters"
-              >
-                <!-- [ngModel]="fecha_inicio"   -->
-              </ion-datetime>
+          <!-- Filtro por Localidad  -->
+          <div *ngIf="!selectdistancia && isFilterLocation">
+            <div class="filter_name">
+              <span>Localidad</span>
             </div>
-            <div class="filter_list">
-              <ion-datetime
-                (ionChange)="filterEvento()"
-                mode="ios"
-                placeholder="hasta"
-                doneText="Seleccionar"
-                cancelText="Cancelar"
-                monthShortNames="{{monthShortNames}}"
-                min="{{ fullDayNext }}"
-                displayFormat="DD MMM YYYY"
-                yearValues="{{ customYearValues }}"
-                formControlName="fecha_fin"
-                id="filters"
-              >
-                <!-- [ngModel]="fecha_fin"   -->
-              </ion-datetime>
-            </div>
-          </div>
-        </div>
-        <!-- Filtro por Fecha  -->
-        <!-- Filtro por Localidad  -->
-        <div *ngIf="!selectdistancia && isFilterLocation">
-          <div class="filter_name filter_type">
-            <span id="filters">Localidad</span>
-          </div>
-          <div>
-            <ion-list class="list_type">
-              <ion-radio-group
-                (ionChange)="filterEvento()"
-                formControlName="localidad"
-              >
-                <ion-item class="filter_list" lines="none">
-                  <ion-text id="filters">Todo</ion-text>
-                  <ion-radio slot="end" value=""></ion-radio>
-                </ion-item>
-                <ion-item
-                  class="filter_list"
-                  lines="none"
-                  *ngFor="let loc of lista_localidades_eventos"
+            <div>
+              <ion-list class="list_type">
+                <ion-radio-group
+                  (ionChange)="filterEvento()"
+                  formControlName="localidad"
+                  class="type_border"
                 >
-                  <ion-text id="filters">{{ loc }}</ion-text>
-                  <ion-radio slot="end" value="{{ loc }}"></ion-radio>
-                </ion-item>
-              </ion-radio-group>
-            </ion-list>
+                  <ion-item class="filter_list" lines="none">
+                    <ion-text>Todo</ion-text>
+                    <ion-radio slot="end" value=""></ion-radio>
+                  </ion-item>
+                  <ion-item
+                    class="filter_list"
+                    lines="none"
+                    *ngFor="let loc of lista_localidades_eventos"
+                  >
+                    <ion-text>{{ loc }}</ion-text>
+                    <ion-radio slot="end" value="{{ loc }}"></ion-radio>
+                  </ion-item>
+                </ion-radio-group>
+              </ion-list>
+            </div>
           </div>
-        </div>
-        <!-- filtro por Localidad -->
+          <!-- filtro por Localidad -->
 
-        <!-- filtro por Tipo -->
-        <div *ngIf="isFilterType">
-          <div class="filter_name filter_type">
-            <span id="filters">Tipo</span>
-          </div>
-          <div>
-            <ion-list class="list_type">
-              <ion-radio-group
-                (ionChange)="filterEvento()"
-                formControlName="tipo"
-                class="type_border"
-              >
-                <ion-item class="filter_list" lines="none">
-                  <ion-text id="filters">Todo</ion-text>
-                  <ion-radio slot="end" value=""></ion-radio>
-                </ion-item>
-                <ion-item
-                  class="filter_list"
-                  lines="none"
-                  *ngFor="let cry of lista_tipos_eventos"
+          <!-- filtro por Tipo -->
+          <div *ngIf="isFilterType">
+            <div class="filter_name">
+              <span>Tipo</span>
+            </div>
+            <div>
+              <ion-list class="list_type">
+                <ion-radio-group
+                  (ionChange)="filterEvento()"
+                  formControlName="tipo"
+                  class="type_border"
                 >
-                  <ion-text id="filters">{{ cry }}</ion-text>
-                  <ion-radio slot="end" value="{{ cry }}"></ion-radio>
-                </ion-item>
-              </ion-radio-group>
-            </ion-list>
+                  <ion-item class="filter_list" lines="none">
+                    <ion-text>Todo</ion-text>
+                    <ion-radio slot="end" value=""></ion-radio>
+                  </ion-item>
+                  <ion-item
+                    class="filter_list"
+                    lines="none"
+                    *ngFor="let cry of lista_tipos_eventos"
+                  >
+                    <ion-text>{{ cry }}</ion-text>
+                    <ion-radio slot="end" value="{{ cry }}"></ion-radio>
+                  </ion-item>
+                </ion-radio-group>
+              </ion-list>
+            </div>
           </div>
-        </div>
-        <!-- Filtro por Tipo -->
-      </form>
+          <!-- Filtro por Tipo -->
+        </form>
+      </div>
     </div>
-  </div>
+  </ion-toolbar>
+</ion-header>
 
-  <!-- =========<=<=<=< Filtro =========<=<=<=< -->
+<ion-content>
   <div>
     <ion-list>
       <ng-container *ngFor="let item of eventos | filterEvents1:dataform">
@@ -231,7 +229,6 @@
                 {{item.fechaInicio | date:'dd.MM.yyyy - HH:mm'}} hs
               </div>
               <div class="titulo">{{item.nombre}}</div>
-              <!-- <div id="filters" class="descripcion">{{ item.descripcion }}</div> -->
               <div class="descripcion">
                 {{ item.distancia | formatDistancia}}
               </div>
