--- a/src/app/pages/dominga/dominga.page.scss
+++ b/src/app/pages/dominga/dominga.page.scss
@@ -1,9 +1,5 @@
-ion-toolbar {
-  height: 8vh;
-}
-
 ion-slides {
-  height: 88vh;
+  height: calc(96vh - 56px);
   margin: 2vh 3%;
   border-radius: 10px !important;
 }
@@ -13,6 +9,7 @@ ion-slide {
   flex-direction: column;
   justify-content: flex-start;
   border-radius: 10px !important;
+  background-color: var(--ion-color-back) !important;
 }
 
 .slide_skeleton {
@@ -25,20 +22,23 @@ ion-slide {
 .info {
   display: flex;
   flex-direction: column;
-  min-height: 30vh;
-  padding: 20px 8px 0 8px ;
+  padding: 20px 0 10px 0;
+  background-color: var(--ion-color-back) !important;
 }
 
 .info_detalle {
   padding: 20px 8px 0 8px ;
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
   overflow-y: scroll;
+  color: var(--ion-color-dark);
 }
 
 .titulo {
   font-family: "Poppins", sans-serif;
   font-size: 1.2rem;
   font-weight: 700;
+  color: var(--ion-color-dark);
 }
 
 ion-avatar, .img_skeletom {
