ajustes modo oscuro y deslexico

--- a/src/app/pages/dominga/dominga.page.html
+++ b/src/app/pages/dominga/dominga.page.html
@@ -7,7 +7,7 @@
         text=""
       ></ion-back-button>
     </ion-buttons>
-    <ion-title color="back" id="nombre">Casa Dominga</ion-title>
+    <ion-title color="back">Casa Dominga</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -28,9 +28,9 @@
           [clase]="preloadClass"
         ></app-preload-details>
       </ion-avatar>
-      <div class="info">
-        <ion-text class="titulo"> {{ item.titulo }} </ion-text>
-        <ion-text class="info_detalle"> {{ item.info }} </ion-text>
+      <div class="info_dominga">
+        <ion-text class="titulo_dominga"> {{ item.titulo }} </ion-text>
+        <ion-text class="info_detalle_dominga"> {{ item.info }} </ion-text>
       </div>
     </ion-slide>
   </ion-slides>
