--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -183,7 +183,7 @@
                 <ion-fab-list side="start" class="list_access">
                   <ion-fab-button
                     class="fab-button-access"
-                    color="light"
+                    color="accessibility"
                     *ngIf="item.accesibilidad.rampa"
                   >
                     <ion-img
@@ -193,7 +193,7 @@
                   </ion-fab-button>
                   <ion-fab-button
                     class="fab-button-access"
-                    color="light"
+                    color="accessibility"
                     *ngIf="item.accesibilidad.banio"
                   >
                     <ion-img
