--- a/src/app/pages/dominga/dominga.page.scss
+++ b/src/app/pages/dominga/dominga.page.scss
@@ -19,14 +19,14 @@ ion-slide {
   justify-content: flex-start;
 }
 
-.info {
+.info_dominga {
   display: flex;
   flex-direction: column;
   padding: 20px 0 10px 0;
   background-color: var(--ion-color-back) !important;
 }
 
-.info_detalle {
+.info_detalle_dominga {
   padding: 20px 8px 0 8px ;
   font-family: "Poppins", sans-serif;
   overflow-x: hidden;
@@ -34,7 +34,7 @@ ion-slide {
   color: var(--ion-color-dark);
 }
 
-.titulo {
+.titulo_dominga {
   font-family: "Poppins", sans-serif;
   font-size: 1.2rem;
   font-weight: 700;
