ajustes modo dislexico y descripcion evento

--- a/src/app/pages/selling-points/selling-points.page.html
+++ b/src/app/pages/selling-points/selling-points.page.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div class="selling-points-title">
-    <p>Puntos de venta</p>
+    <p class="selling_points_event">Puntos de venta</p>
     <ion-icon name="close-outline" (click)="cancelar()"></ion-icon>
   </div>
   <ion-grid>
@@ -17,7 +17,7 @@
         >
         </ion-img>
         <ion-text>
-          <p>Tickantel</p>
+          <p class="selling_points_event">Tickantel</p>
         </ion-text>
       </ion-col>
       <ion-col size="6">
@@ -31,7 +31,7 @@
           src="/assets/selling-point/wpp-byn.png"
         ></ion-img>
         <ion-text>
-          <p>WhatsApp</p>
+          <p class="selling_points_event">WhatsApp</p>
         </ion-text>
       </ion-col>
     </ion-row>
@@ -47,7 +47,7 @@
           src="/assets/selling-point/ig-byn.png"
         ></ion-img>
         <ion-text>
-          <p>Instagram</p>
+          <p class="selling_points_event">Instagram</p>
         </ion-text>
       </ion-col>
       <ion-col size="6">
@@ -61,7 +61,7 @@
           src="/assets/selling-point/fb-byn.png"
         ></ion-img>
         <ion-text>
-          <p>Facebook</p>
+          <p class="selling_points_event">Facebook</p>
         </ion-text>
       </ion-col>
     </ion-row>
