--- a/src/app/pages/event-detail/event-detail.page.scss
+++ b/src/app/pages/event-detail/event-detail.page.scss
@@ -15,7 +15,6 @@ ion-title {
   width: 100%;
   height: auto;
   padding: 3% 3% 0 3%;
-
 }
 
 .foto > img {
@@ -54,7 +53,7 @@ ion-title {
 
 .div-ubicacion {
   text-decoration: underline;
-  color: var(--ion-color-dark);;
+  color: var(--ion-color-dark);
   font-family: "Poppins", sans-serif;
 }
 
@@ -64,7 +63,7 @@ ion-title {
   box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0);
   -webkit-box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0);
   -moz-box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0);
-  color: var(--ion-color-dark);;
+  color: var(--ion-color-dark);
   border-radius: 5px;
   padding: 15px;
   background-color: var(--ion-color-light);
@@ -97,7 +96,7 @@ ion-title {
   padding: 7px 15px;
   font-family: Barlow;
   font-size: 12px;
-  line-height : 17px;
+  line-height: 17px;
   font-family: "Poppins", sans-serif;
 }
 
@@ -213,7 +212,10 @@ li {
   color: white;
 }
 
-#days, #hours, #minutes, #seconds {
+#days,
+#hours,
+#minutes,
+#seconds {
   font-size: 2.5em;
   font-weight: bold;
   color: #fff;
@@ -241,5 +243,11 @@ li {
     //height: 60px;
     background-color: var(--ion-color-text);
     border-top: 10px solid var(--ion-color-back);
+  }
+}
+
+@media only screen and (max-width: 325px) {
+  .time-list {
+    font-size: 15px;
   }
 }
