color header menu

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,11 +1,10 @@
 <ion-menu side="start" menuId="first" contentId="main">
   <ion-header>
-    <ion-toolbar color="primary">
-      <ion-title>Configuraciones</ion-title>
+    <ion-toolbar color="favorite">
+      <ion-title color="back">Configuraciones</ion-title>
       <ion-buttons slot="end">
         <i
           class="fi fi-rr-arrow-left closeMenu"
-          color="back"
           (click)="toggleMenu()"
         ></i>
       </ion-buttons>
