--- a/src/app/pages/dominga/dominga.page.scss
+++ b/src/app/pages/dominga/dominga.page.scss
@@ -27,7 +27,8 @@ ion-slide {
 }
 
 .info_detalle_dominga {
-  padding: 20px 8px 0 8px ;
+  padding: 10px 8px 0 8px;
+  height: calc((96vh - 5vh - 76px) - ((100vw - (100vw * 0.06)) / 1.33));
   font-family: "Poppins", sans-serif;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -35,6 +36,7 @@ ion-slide {
 }
 
 .titulo_dominga {
+  height: 5vh;
   font-family: "Poppins", sans-serif;
   font-size: 1.2rem;
   font-weight: 700;
