--- a/src/app/pages/event-detail/event-detail.page.scss
+++ b/src/app/pages/event-detail/event-detail.page.scss
@@ -4,6 +4,7 @@
 * {
   margin: 0;
   padding: 0;
+  z-index: 0;
 }
 
 ion-title {
@@ -98,6 +99,8 @@ ion-title {
   font-size: 12px;
   line-height: 17px;
   font-family: "Poppins", sans-serif;
+  position: relative;
+  z-index: 50;
 }
 
 .ticket {
@@ -223,6 +226,46 @@ li {
 
 .raduis {
   font-family: "Poppins", sans-serif;
+}
+
+@media only screen and (min-height: 750px) and (max-height: 800px) {
+  .ticket {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: sticky;
+    position: -webkit-sticky;
+    position: -moz-sticky;
+    position: -o-sticky;
+    position: -ms-sticky;
+    bottom: 0;
+    right: 0;
+    z-index: 1001;
+    top: 100vh;
+    width: 100%;
+    background-color: var(--ion-color-text);
+    border-top: 10px solid var(--ion-color-back);
+  }
+}
+
+@media only screen and (min-height: 900px) {
+  .ticket {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: sticky;
+    position: -webkit-sticky;
+    position: -moz-sticky;
+    position: -o-sticky;
+    position: -ms-sticky;
+    bottom: 0;
+    right: 0;
+    z-index: 1001;
+    top: 100vh;
+    width: 100%;
+    background-color: var(--ion-color-text);
+    border-top: 10px solid var(--ion-color-back);
+  }
 }
 
 @media only screen and (max-width: 325px) {
