--- a/src/app/pages/modal-info/modal-info.page.scss
+++ b/src/app/pages/modal-info/modal-info.page.scss
@@ -13,7 +13,7 @@ ion-grid {
   margin-right: 12%;
 }
 
-.circulo_red {
+.circulo_red, .circulo_red > a, .circulo_red > div {
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
@@ -26,7 +26,7 @@ ion-grid {
   padding: 3%;
 }
 
-.circulo_red_wpp {
+.circulo_red_wpp, .circulo_red_wpp > a {
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
