orden de listas

--- a/src/app/pages/where-sleep/where-sleep.page.scss
+++ b/src/app/pages/where-sleep/where-sleep.page.scss
@@ -27,6 +27,10 @@ ion-title {
   font-family: "Poppins", sans-serif;
 }
 
+.lista {
+  overflow-y: scroll;
+}
+
 small {
   margin-top: 5px;
   padding-bottom: 2px;
