--- a/src/app/pages/where-sleep/where-sleep.page.html
+++ b/src/app/pages/where-sleep/where-sleep.page.html
@@ -63,7 +63,7 @@
               <span id="filters">Localidad</span>
             </div>
             <div>
-              <ion-list class="list_location" (click)="changeFilterSleep()">
+              <ion-list class="list_location" inset="true">
                 <ion-radio-group
                   (ionChange)="filterSleep()"
                   formControlName="localidad"
