--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -481,6 +481,7 @@ body.dyslexic {
   .sugDistancia,
   .text_empty,
   .filter_name,
+  .filter_name > span,
   ion-datetime,
   .filter_list,
   .fecha,
