--- a/src/app/pages/artist/artist.page.html
+++ b/src/app/pages/artist/artist.page.html
@@ -72,7 +72,7 @@
               <span>Localidad</span>
             </div>
             <div>
-              <ion-list class="list_type">
+              <ion-list class="list_type" inset="true">
                 <ion-radio-group
                   (ionChange)="filterArtist()"
                   formControlName="localidad"
@@ -102,7 +102,7 @@
               <span>Tipo</span>
             </div>
             <div>
-              <ion-list class="list_type">
+              <ion-list class="list_type" inset="true">
                 <ion-radio-group
                   (ionChange)="filterArtist()"
                   formControlName="categoria"
