--- a/src/app/pages/events/events.page.html
+++ b/src/app/pages/events/events.page.html
@@ -129,7 +129,7 @@
               <span>Localidad</span>
             </div>
             <div>
-              <ion-list class="list_type">
+              <ion-list class="list_type" inset="true">
                 <ion-radio-group
                   (ionChange)="filterEvento()"
                   formControlName="localidad"
@@ -159,7 +159,7 @@
               <span>Tipo</span>
             </div>
             <div>
-              <ion-list class="list_type">
+              <ion-list class="list_type" inset="true">
                 <ion-radio-group
                   (ionChange)="filterEvento()"
                   formControlName="tipo"
