--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -70,7 +70,7 @@
               <span>Localidad</span>
             </div>
             <div>
-              <ion-list class="list_type">
+              <ion-list class="list_type" inset="true">
                 <ion-radio-group
                   (ionChange)="filterPlace()"
                   formControlName="localidad"
@@ -100,7 +100,7 @@
               <span>Tipo</span>
             </div>
             <div>
-              <ion-list class="list_type">
+              <ion-list class="list_type" inset="true">
                 <ion-radio-group
                   (ionChange)="filterPlace()"
                   formControlName="tipo"
@@ -144,7 +144,7 @@
               [routerLink]="['/place-selected', item.id]"
               (click)="getPlace(item.id); sumaVisitaLugar(item.id)"
             >
-              {{ item.nombre }}<span class="categoria"
+              <span color="back">{{ item.nombre }}</span><span class="categoria"
                 >&nbsp;&nbsp;({{item.tipo}})</span
               >
             </ion-card-header>
