--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -60,7 +60,7 @@
               <span>Localidad</span>
             </div>
             <div>
-              <ion-list class="list_location" (click)="changeFilterEat()">
+              <ion-list class="list_location" inset="true">
                 <ion-radio-group
                   (ionChange)="filterEat()"
                   formControlName="localidad"
